# axmol

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeOptions.md  INFRA.md  README.md  README_CN.md  setup.ps1
1k/: 1kiss.ps1  fetch.cmake  (+13 more)
extensions/ImGui/: CMakeLists.txt  README.md
extensions/ImGui/src/ImGui/: ImGuiPresenter.cpp  ImGuiPresenter.h  imconfig.h  imgui.cpp  imgui_internal.h
extensions/ImGui/src/ImGui/backends/: imgui_impl_axmol.cpp  imgui_impl_axmol.h  imgui_impl_axmol_sw.cpp  imgui_impl_axmol_sw.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h
extensions/Live2D/: CMakeLists.txt  live2d-core.cmake
extensions/Live2D/Framework/src/Rendering/Axmol/: CubismCommandBuffer_Axmol.cpp  CubismCommandBuffer_Axmol.hpp  CubismOffscreenSurface_Axmol.cpp  CubismOffscreenSurface_Axmol.hpp  CubismRenderer_Axmol.cpp  CubismRenderer_Axmol.hpp
extensions/Live2D/Framework/src/Rendering/axmol/: CMakeLists.txt  CubismCommandBuffer_Axmol.cpp  CubismCommandBuffer_Axmol.hpp  CubismCommandBuffer_Cocos2dx.cpp  CubismOffscreenSurface_Axmol.cpp  CubismOffscreenSurface_Axmol.hpp  CubismRenderer_Axmol.cpp  CubismRenderer_Axmol.hpp  CubismRenderer_Cocos2dx.cpp
extensions/sceneext/: CMakeLists.txt
extensions/sceneext/src/sceneext/: ActionFrame.cpp  ActionFrame.h  ActionFrameEasing.cpp  ActionFrameEasing.h  ActionManagerEx.cpp  ActionManagerEx.h  ActionNode.cpp  ActionNode.h  ActionObject.cpp  ActionObject.h  AnimationController.cpp  AnimationController.h  AnimationData.cpp  AnimationData.h  Armature.cpp  Armature.h  ArmatureController.cpp  ArmatureController.h  ArmatureDataManager.cpp  ArmatureDataManager.h  ArmatureDefine.cpp  ArmatureDefine.h  BatchNode.cpp  BatchNode.h  Bone.cpp  Bone.h  BoneTweenController.cpp  BoneTweenController.h  CSCommon_generated.h  CocoLoader.cpp  CocoLoader.h  ColliderDetector.cpp  ColliderDetector.h  ComAttribute.cpp  ComAttribute.h  ComAudio.cpp  ComAudio.h  ComBase.h  ComController.cpp  ComController.h  (+39 more)
extensions/sceneext/src/sceneext/ActionTimeline/: ActionTimeline.cpp  ActionTimeline.h  ActionTimelineData.cpp  ActionTimelineData.h  ActionTimelineNode.cpp  ActionTimelineNode.h  BoneNode.cpp  BoneNode.h  Frame.cpp  Frame.h  SkeletonNode.cpp  SkeletonNode.h  SkinNode.h  TimeLine.cpp  TimeLine.h  TimelineMacro.h
extensions/sceneext/src/sceneext/WidgetReader/: NodeReaderDefine.h  NodeReaderProtocol.cpp  NodeReaderProtocol.h  WidgetReaderProtocol.cpp  WidgetReaderProtocol.h
extensions/sceneio/: CMakeLists.txt
extensions/sceneio/src/sceneio/: FlatBuffersSerialize.cpp  FlatBuffersSerialize.h  LocalizationManager.cpp  LocalizationManager.h  sceneio.cpp  sceneio.h
extensions/sceneio/src/sceneio/ActionTimeline/: ActionTimelineCache.cpp  ActionTimelineCache.h  CSLoader.cpp  CSLoader.h
extensions/sceneio/src/sceneio/WidgetReader/: WidgetReader.cpp  WidgetReader.h
extensions/sceneio/src/sceneio/WidgetReader/ArmatureNodeReader/: ArmatureNodeReader.cpp  ArmatureNodeReader.h  CSArmatureNode_generated.h
extensions/sceneio/src/sceneio/WidgetReader/ButtonReader/: ButtonReader.cpp  ButtonReader.h
extensions/sceneio/src/sceneio/WidgetReader/CheckBoxReader/: CheckBoxReader.cpp  CheckBoxReader.h
extensions/sceneio/src/sceneio/WidgetReader/ComAudioReader/: ComAudioReader.cpp  ComAudioReader.h
extensions/sceneio/src/sceneio/WidgetReader/GameMapReader/: GameMapReader.cpp  GameMapReader.h
extensions/sceneio/src/sceneio/WidgetReader/GameNode3DReader/: GameNode3DReader.cpp  GameNode3DReader.h
extensions/sceneio/src/sceneio/WidgetReader/ImageViewReader/: ImageViewReader.cpp  ImageViewReader.h
extensions/sceneio/src/sceneio/WidgetReader/LayoutReader/: LayoutReader.cpp  LayoutReader.h
extensions/sceneio/src/sceneio/WidgetReader/Light3DReader/: Light3DReader.cpp  Light3DReader.h
extensions/sceneio/src/sceneio/WidgetReader/ListViewReader/: ListViewReader.cpp  ListViewReader.h
extensions/sceneio/src/sceneio/WidgetReader/LoadingBarReader/: LoadingBarReader.cpp  LoadingBarReader.h
extensions/sceneio/src/sceneio/WidgetReader/Node3DReader/: Node3DReader.cpp  Node3DReader.h
extensions/sceneio/src/sceneio/WidgetReader/NodeReader/: NodeReader.cpp  NodeReader.h
extensions/sceneio/src/sceneio/WidgetReader/PageViewReader/: PageViewReader.cpp  PageViewReader.h
extensions/sceneio/src/sceneio/WidgetReader/Particle3DReader/: Particle3DReader.cpp  Particle3DReader.h
extensions/sceneio/src/sceneio/WidgetReader/ParticleReader/: ParticleReader.cpp  ParticleReader.h
extensions/sceneio/src/sceneio/WidgetReader/ProjectNodeReader/: ProjectNodeReader.cpp  ProjectNodeReader.h
extensions/sceneio/src/sceneio/WidgetReader/RadioButtonReader/: RadioButtonGroupReader.cpp  RadioButtonGroupReader.h  RadioButtonReader.cpp  RadioButtonReader.h
(+1402 files in other folders)
